--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,8 +46,14 @@ markdown_extensions:
   - pymdownx.superfences
 
 plugins:
-  - awesome-pages
+  - awesome-pages:
+      strict: false
   - search
+  - i18n:
+      default_language: en
+      languages:
+        en: '<img style="height: 15px;" alt="🇬🇧" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/svg/1f1ec-1f1e7.svg" title="english" />'
+        fr: '<img style="height: 15px;" alt="🇫🇷" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/svg/1f1eb-1f1f7.svg" title="français" />'
   # https://github.com/datarobot/mkdocs-redirects
   - redirects:
       redirect_maps:
