--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ mkdocs-material==6.2.7
 mkdocs-material-extensions==1.0.1
 mkdocs-redirects==1.0.1
 mkdocs-rss-plugin==0.12.0
-mkdocs-static-i18n==0.1
+mkdocs-static-i18n>=0.8
 nltk==3.5
 Pygments==2.7.4
 pymdown-extensions==8.1.1
