--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,27 @@
-Babel==2.9.0
-bracex==2.0.1
-click==7.1.2
-future==0.18.2
-gitdb==4.0.5
-GitPython==3.1.12
-Jinja2==2.11.3
-joblib==1.0.0
-livereload==2.6.3
-lunr==0.5.8
-Markdown==3.3.3
-markdown-include==0.6.0
-MarkupSafe==1.1.1
-mkdocs==1.1.2
+Babel==2.9.1
+bracex==2.1.1
+click==8.0.1
+ghp-import==2.0.1
+importlib-metadata==4.6.0
+Jinja2==3.0.1
+Markdown==3.3.4
+MarkupSafe==2.0.1
+mergedeep==1.3.4
+mkdocs==1.2.1
 mkdocs-awesome-pages-plugin==2.5.0
-mkdocs-git-revision-date-localized-plugin==0.8
-mkdocs-material==6.2.7
+mkdocs-material==7.1.9
 mkdocs-material-extensions==1.0.1
-mkdocs-redirects==1.0.1
-mkdocs-rss-plugin==0.12.0
-mkdocs-static-i18n>=0.8
-nltk==3.5
-Pygments==2.7.4
-pymdown-extensions==8.1.1
+mkdocs-redirects==1.0.3
+mkdocs-static-i18n==0.17
+packaging==20.9
+Pygments==2.9.0
+pymdown-extensions==8.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2021.1
 PyYAML==5.4.1
-regex==2020.11.13
-six==1.15.0
-smmap==3.0.5
-tornado==6.1
-tqdm==4.56.0
-wcmatch==8.0.1
+pyyaml-env-tag==0.1
+six==1.16.0
+watchdog==2.1.3
+wcmatch==8.2
+zipp==3.4.1
