--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,8 @@ plugins:
   # https://github.com/datarobot/mkdocs-redirects
   - redirects:
       redirect_maps:
+        "create-beautiful-and-localized-documentations-and-websites-using-mkdocs-github.md": "Tech Blog/2021/2021-07-28-create-beautiful-and-localized-documentations-and-websites-using-mkdocs-github.md"
+        "ep2021.md": "Tech Blog/2021/2021-07-28-create-beautiful-and-localized-documentations-and-websites-using-mkdocs-github.md"
         "on-scylla-manager-suspend-resume.md": "Tech Blog/2021/2021-05-06-on-scylla-manager-suspend-resume.md"
         "from-wordpress-to-mkdocs.md": "Tech Blog/2021/2021-03-12-from-wordpress-to-mkdocs.md"
         "renaming-and-reshaping-scylla-tables-using-scylla-migrator.md": "Tech Blog/2020/2020-11-06-renaming-and-reshaping-scylla-tables-using-scylla-migrator.md"
