--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,6 @@
-Babel==2.9.1
-bracex==2.1.1
-click==8.0.1
-ghp-import==2.0.1
-importlib-metadata==4.6.0
-Jinja2==3.0.1
-Markdown==3.3.4
-MarkupSafe==2.0.1
-mergedeep==1.3.4
 mkdocs==1.2.2
 mkdocs-awesome-pages-plugin==2.5.0
 mkdocs-material==7.2.0
-mkdocs-material-extensions==1.0.1
 mkdocs-redirects==1.0.3
 mkdocs-static-i18n==0.18
-packaging==20.9
-Pygments==2.9.0
-pymdown-extensions==8.2
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-pyyaml-env-tag==0.1
-six==1.16.0
-watchdog==2.1.3
-wcmatch==8.2
-zipp==3.4.1
+mkdocs-rss-plugin==0.17.0
